crates/audiomirror-cli/tests/snapshots/help_snapshots__help_loop.snap
---
source: crates/audiomirror-cli/tests/help_snapshots.rs
expression: output
---
Single-process loopback test: capture from an input device, encode
with Opus, immediately decode, and play back on an output device with no network hop.

Use this to verify the audio pipeline is working end-to-end, measure codec latency,
and confirm device IDs before setting up a two-machine session.

Note: --source system is available on Windows (WASAPI loopback) and Linux (.monitor
sources). On macOS prefer BlackHole 2ch as --input instead.

Examples:
audiomirror-cli loop \
--input "Built-in Microphone" \
--output "Built-in Speakers"

# Windows system audio loopback test
audiomirror-cli loop --input ignored --output "Speakers" --source system

Usage: audiomirror-cli loop [OPTIONS] --input <INPUT> --output <OUTPUT>

Options:
      --input <INPUT>
          

      --output <OUTPUT>
          

      --bitrate <BITRATE>
          [default: 64000]

      --source <SOURCE>
          [default: mic]
          [possible values: mic, system]

      --fec-mode <FEC_MODE>
          [default: auto]
          [possible values: auto, always, never]

      --simulated-loss-pct <SIMULATED_LOSS_PCT>
          [default: 0]

  -h, --help
          Print help (see a summary with '-h')
