crates/audiomirror-cli/tests/snapshots/help_snapshots__help_stream_open.snap
---
source: crates/audiomirror-cli/tests/help_snapshots.rs
expression: output
---
Open a peer-to-peer audio stream within an existing session.

Requires a running daemon (`audiomirror-cli daemon`).  The source peer encodes audio
from the --from device with Opus at the chosen bitrate and sends it over UDP to the
--to device on the remote peer.  Obtain the session UUID from the daemon REPL `sessions`
command after running `connect` + `accept` + `open`.

Device syntax:
--from in:<index>              local input device by index
--to   <peer-name>:out:<index> remote output device on the named peer

Examples:
# Inside the daemon REPL — stream mic to remote speaker
stream open --from in:0 --to bob:out:1 --session e5f6a7b8-...

# Higher bitrate for music
stream open --from in:0 --to bob:out:1 --session e5f6a7b8-... --bitrate 96000

Usage: audiomirror-cli stream open [OPTIONS] --from <FROM> --to <TO>

Options:
      --from <FROM>
          

      --to <TO>
          

      --session <SESSION>
          

      --bitrate <BITRATE>
          [default: 64000]

  -h, --help
          Print help (see a summary with '-h')
